@@ -1,5 +1,6 @@
 package com.example.RuleEngine;
 
+import net.bytebuddy.agent.ByteBuddyAgent;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration;
@@ -8,7 +9,8 @@ import org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration;
 public class RuleEngineApplication {
 
 	public static void main(String[] args) {
-
+		System.setProperty("--add-opens", "java.base/java.lang=ALL-UNNAMED");
+		ByteBuddyAgent.install();
 		SpringApplication.run(RuleEngineApplication.class, args);
 	}
 
